--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -167,7 +167,7 @@ nav {
 
     .nav-links {
       a {
-        font-size: 1.5rem;
+        font-size: 1rem;
       }
     }
     
@@ -195,7 +195,7 @@ nav {
 
       > li {
         font-size: 2rem;
-        margin: 0.25rem 0;
+        margin: 0;
         text-align: left;
         width: 100%;
 
@@ -241,10 +241,16 @@ nav {
       display: block;
       opacity: 1;
       padding: 0;
+      margin-left: 2rem;
+      align-items: left;;
       position: static;
       transform: none;
       visibility: visible;
       width: 100%;
+
+      &:hover, &:focus-within {
+        transform: none;
+      }
 
       a {
         opacity: 1;
